Issue #72: Tweaked the edit icon size downwards a bit.
Noticed that it looked a bit too big if the name it was next to is all
lowercase.

--- a/rps-tourney-webapp/src/main/webapp/WEB-INF/resources/css/rps.less
+++ b/rps-tourney-webapp/src/main/webapp/WEB-INF/resources/css/rps.less
@@ -94,7 +94,7 @@ table#player-games {
 		}
 		
 		h3.player-name .glyphicon-edit {
-			font-size: 0.65em;
+			font-size: 0.6em;
 			color: @text-muted;
 		}
 		
